@@ -52,6 +52,7 @@ Bug fixes
  * PostgreSQL search backend now removes duplicate page instances from the database (Bertrand Bordage)
  * ``FormSubmissionsPanel`` now recognises custom form submission classes (LB (Ben Johnston))
  * Prevent the footer and revisions link from unnecessarily collapsing on mobile (Jack Paine)
+ * Empty searches were activated when paginating through images and documents (LB (Ben Johnston))
 
 
 Upgrade considerations
